--- a/RockPaperScissors/RockPaperScissors.csproj
+++ b/RockPaperScissors/RockPaperScissors.csproj
@@ -1,6 +1,5 @@
-<Project Sdk="Microsoft.Net.Sdk">
+<Project Sdk="Microsoft.Net.Sdk.Web">
     <PropertyGroup>
         <TargetFramework>.net6.0</TargetFramework>
-        <OutputType>Exe</OutputType>
     </PropertyGroup>
 </Project>
